--- a/todo/v2-2-0.md
+++ b/todo/v2-2-0.md
@@ -13,8 +13,7 @@ try{
 
   await transaction.connection()
   const data = await transaction.start()
-  transaction.release()
-
+  console.log(data)
 }catch(e){
   throw new TransactionError(e)
 }
