--- a/todo/v2-2-0.md
+++ b/todo/v2-2-0.md
@@ -5,9 +5,9 @@
 ````ts
 const transaction = this.Entity.createTransaction()
 
-transaction.push( fn1 )
-transaction.push( fn2 )
-transaction.push( fn3 )
+transaction.push( async () => fn1 )
+transaction.push( async () => fn2 )
+transaction.push( async () => fn3 )
 
 try{
 
