--- a/todo/v2-9-0.md
+++ b/todo/v2-9-0.md
@@ -21,6 +21,7 @@
 ````yaml
 interface:
     name: AnimalInterFace
+    remote: http://127.0.0.1:9000
     description: "用于编写 Animal 接口的配置文档"
 method:
     hello:
@@ -31,7 +32,7 @@ method:
         res: JumpResponse
 ````
 
-配置文件可以生成如下的 Rpc接口文件
+生成 Rpc-Server接口文件
 
 ````TS
 import { RpcServerController,Register } from "ado-node";
@@ -54,4 +55,29 @@ class AnimalInterFace {
 export{
     AnimalInterFace
 }
+````
+
+生成 Rpc-Client接口文件
+
+````ts
+import { RpcClientController,Call, Body } from "ado-node"
+
+// 转发
+@RpcClientController(Controller,{interFace:AnimalInterFace,url:remote})
+class AnimalRpcController{
+
+    @Call("/hello",hello)
+    async hello(@Body() body:HelloRequest){
+        const {name,age} = body
+        throw new Error("")
+    }
+
+    @Call("/jump",jump)
+    async jump(@Body() body:JumpRequest){
+        const {name,age} = body
+        throw new Error("")
+    }
+}
+
+export {AnimalRpcController}
 ````
